--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
-  <title>MIYOUWI, LLC : https://miyouwi.com/</title>
+  <title>test</title>
 </head>
 <body>
   <div id="star"></div>
@@ -12,6 +12,6 @@
   <!--If you want to use Jquery, insert this code 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   -->
-  <script src="js/index.js"></script>
+  <script src="data.js"></script>
 </body>
 </html>
