--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/demo.css">
   <title>test</title>
 </head>
 <body>
@@ -12,6 +12,6 @@
   <!--If you want to use Jquery, insert this code 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   -->
-  <script src="data.js"></script>
+  <script src="js/data.js"></script>
 </body>
 </html>
