--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <!--If you want to use Jquery, insert this code 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   -->
-  <script src="js/data.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
